@@ -1,5 +1,6 @@
 5.0
 WPS attacks menu added
+WPS scanning based on wash tool
 
 4.32
 Some code improvements and refactors. Warnings removed based on shellcheck tool
